--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@uiball/loaders": "^1.3.1",
     "axios": "^1.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loading-indicators": "^1.0.1",
     "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
