--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@uiball/loaders": "^1.3.1",
     "axios": "^1.9.0",
+    "nanoid": "^5.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-loading-indicators": "^1.0.1",
